<resources>
    <string name="app_name" translatable="false">MobileApp</string>
    <string name="drive_next" translatable="false">DriveNext</string>
    <string name="description">Поможем найти твою следующую поездку</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="check_connection">Проверьте подключение и повторите попытку</string>
    <string name="try_again">Повторить попытку</string>
    <string name="skip">Пропустить</string>
    <string name="illustration">Иллюстрация</string>
    <string name="boarding_title1">Аренда автомобилей</string>
    <string name="boarding_description1">Открой для себя удобный и доступный способ передвижения</string>
    <string name="boarding_title2">Безопасно и удобно</string>
    <string name="boarding_description2">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="boarding_title3">Лучшие предложения</string>
    <string name="boarding_description3">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="next">Далее</string>
    <string name="tab_selector_description">Переключатель вкладок</string>
    <string name="log_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="congratulations">Поздравляем</string>
    <string name="log_into_account">Войдите в аккаунт</string>
    <string name="login_description">Пожалуйста, введите свои данные</string>
    <string name="email">Электронная почта</string>
    <string name="enter_email">Введите электронную почту</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="signup_with_google">Войти через Google</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="google_icon_description">Инонка Google</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="accept_terms">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="enter_middle_name">Введите отчество</string>
    <string name="birthday">Дата рождения</string>
    <string name="birthday_format" translatable="false">DD/MM/YYYY</string>
    <string name="middle_name">Отчество</string>
    <string name="enter_first_name">Введите имя</string>
    <string name="name">Имя</string>
    <string name="enter_last_name">Введите фамилию</string>
    <string name="last_name">Фамилия</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="add_pfp">Добавить изображение профиля</string>
    <string name="add_pfp_description">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="driver_license">Номер водительского удостоверения</string>
    <string name="date_of_issue">Дата выдачи</string>
    <string name="add_license_photo">Загрузите фото водительского удостоверения</string>
    <string name="upload_file">Загрузить фото</string>
    <string name="upload_passport">Загрузите фото паспорта</string>
    <string name="congratulations_text">Вы успешно зарегистрировались. Обработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
    <string name="enter_valid_email">Введите корректный email</string>
    <string name="login_error">Ошибка входа %s</string>
    <string name="password_at_least_6">Пароль должен быть не менее 6 символов</string>
    <string name="passwords_dont_match">Пароли не совпадают</string>
    <string name="agreement_required">Необходимо согласие с условиями</string>
    <string name="date_not_valid">Неверный формат даты (ДД.ММ.ГГГГ)</string>
    <string name="enter_date_of_issue">Введите дату выдачи</string>
    <string name="license_short">Номер удостоверения слишком короткий</string>
    <string name="later">Функция будет реализована позже</string>
    <string name="enter_birthdate">Введите дату рождения</string>
    <string name="choose_gender">Выберите пол</string>
    <string name="invalid_date_format">Неверный формат даты (ДД.ММ.ГГГГ)</string>
    <string name="error_email_already_exists">Пользователь с такой почтой уже существует</string>
    <string name="sign_up_error">Ошибка регистрации: %1$s</string>
    <string name="account_deactivated">Аккаунт деактивирован</string>
    <string name="invalid_password">Неверный пароль</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="price_per_day_format">%dр в день</string>
    <string name="load_data_error">Не удалось загрузить данные. Попробуйте снова.</string>
    <string name="search_error">Не удалось выполнить поиск. Попробуйте снова.</string>
    <string name="no_cars_found">Автомобили марки %s не найдены</string>
</resources>