<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/view_login"
        android:layout_width="342dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:paddingTop="64dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/log_into_account"
            android:textColor="@color/second_primary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/login_description"
            android:textColor="#667085"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/email"
            android:textColor="#404040"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:autofillHints="@string/enter_email"
            android:background="@drawable/shape_button_blank_cornered"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="14dp"
            android:paddingTop="10dp"
            android:paddingEnd="14dp"
            android:paddingBottom="10dp"
            android:textAllCaps="false"
            android:textColor="#667085"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/password"
            android:textColor="#404040"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:autofillHints="@string/enter_password"
            android:background="@drawable/shape_button_blank_cornered"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="14dp"
            android:paddingTop="10dp"
            android:paddingEnd="14dp"
            android:paddingBottom="10dp"
            android:textAllCaps="false"
            android:textColor="#667085"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/forgot_password"
            android:textColor="@color/primary"
            android:textSize="14sp" />


        <android.widget.Button
            android:id="@+id/btn_login"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_button_footer"
            android:backgroundTint="#2A1246"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="32dp"
            android:paddingTop="14dp"
            android:paddingEnd="32dp"
            android:paddingBottom="14dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/btn_login_google"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_button_blank_cornered"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingTop="14dp"
            android:paddingEnd="32dp"
            android:paddingBottom="14dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/google_icon_description"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/signup_with_google"
                android:textColor="#344054"
                android:textSize="14sp" />

        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sign_up"
            android:textColor="@color/primary"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>