<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="342dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/view_activity_sign_up2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" >

            <ImageButton
                android:id="@+id/ibtn_sign_up_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="68dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/create_account"
                android:textColor="@color/second_primary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:text="@string/last_name"
            android:textColor="#404040"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            android:minHeight="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_blank_cornered"
            android:paddingStart="14dp"
            android:paddingTop="10dp"
            android:paddingEnd="14dp"
            android:paddingBottom="10dp"
            android:hint="@string/enter_last_name"
            android:textColor="#404040"
            android:textColorHint="#667085"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:maxLines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textColor="#404040"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            android:minHeight="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_blank_cornered"
            android:paddingStart="14dp"
            android:paddingTop="10dp"
            android:paddingEnd="14dp"
            android:paddingBottom="10dp"
            android:hint="@string/enter_first_name"
            android:textColor="#404040"
            android:textColorHint="#667085"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:maxLines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/middle_name"
            android:textColor="#404040"
            android:textSize="14sp"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_middle_name"
            android:minHeight="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_button_blank_cornered"
            android:paddingStart="14dp"
            android:paddingTop="10dp"
            android:paddingEnd="14dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="4dp"
            android:hint="@string/enter_middle_name"
            android:textColor="#404040"
            android:textColorHint="#667085"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:maxLines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/birthday"
            android:textColor="#404040"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_birth_date"
            android:minHeight="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_blank_cornered"
            android:paddingStart="14dp"
            android:paddingTop="10dp"
            android:paddingEnd="14dp"
            android:paddingBottom="10dp"
            android:hint="@string/birthday_format"
            android:textColor="#404040"
            android:textColorHint="#667085"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:inputType="date"
            android:focusable="true"
            android:clickable="true"
            android:imeOptions="actionNext" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textColor="#404040"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/male"
                android:buttonTint="@color/new_gray"
                android:layout_marginEnd="32dp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:buttonTint="@color/new_gray"
                android:text="@string/female"
            />


        </LinearLayout>


    <TextView
        android:id="@+id/tv_gender_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/error_red"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat_regular"
        android:visibility="gone"
        android:layout_marginTop="4dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


        <android.widget.Button
            android:id="@+id/btn_sign_up_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#2A1246"
            android:background="@drawable/shape_button_footer"
            android:paddingStart="32dp"
            android:paddingTop="14dp"
            android:paddingEnd="32dp"
            android:paddingBottom="14dp"
            android:layout_marginBottom="36dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textAllCaps="false" />

    </LinearLayout>

